// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button component Should render disabled 1`] = `
<button
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255,179,186, 1)",
      "borderRadius": "1vw",
      "boxSizing": "border-box",
      "color": "white",
      "cursor": "cursor",
      "fontSize": "1em",
      "height": "3vw",
      "width": "100%",
    }
  }
/>
`;

exports[`Test Button component Should render properly 1`] = `
<button
  onMouseDown={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255,150,150, 1)",
      "borderRadius": "1vw",
      "boxSizing": "border-box",
      "color": "white",
      "cursor": "pointer",
      "fontSize": "1em",
      "height": "3vw",
      "width": "100%",
    }
  }
/>
`;
